--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://obligat.github.io/"
+  "homepage": "https://obligat.github.io/todo-list-react"
 }
